force-app/main/default/objects/Affiliation__c/Affiliation__c.object-meta.xml
<CustomObject>
    <description>Connection between a Contact and an Account.</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>