force-app/main/default/objects/Affiliation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organization this person is affiliated with.</description>
    <inlineHelpText>The organization this person is affiliated with.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Contacts</relationshipLabel>
    <relationshipName>Affl_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>