force-app/main/default/objects/Affiliation__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <description>Record type of the affiliated Account, for example, Academic Department or Sports Organization (read-only).</description>
    <formula>Account__r.RecordType.Name</formula>
    <inlineHelpText>Record type of the affiliated Account, for example, Academic Department or Sports Organization (read-only).</inlineHelpText>
    <label>Affiliation Type</label>
    <type>Text</type>
</CustomField>