force-app/main/default/objects/Affiliation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person affiliated with this organization.</description>
    <inlineHelpText>The person affiliated with this organization.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliated Accounts</relationshipLabel>
    <relationshipName>Affl_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>