force-app/main/default/objects/Affiliation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Details of how the person and organization are affiliated.</description>
    <inlineHelpText>Details of how the person and organization are affiliated.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>