force-app/main/default/objects/Affiliation__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The date this Affiliation ended or will end.</description>
    <inlineHelpText>The date this Affiliation ended or will end.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>