force-app/main/default/objects/Affiliation__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the main Affiliation for this person. If selected, the organization name is stored in the relevant Primary Affiliation field on the Contact record.</description>
    <inlineHelpText>Indicates whether this is the main Affiliation for this person. If selected, the organization name is stored in the relevant Primary Affiliation field on the Contact record.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>