force-app/main/default/objects/Affiliation__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The date this person became affiliated with this organization.</description>
    <inlineHelpText>The date this person became affiliated with this organization.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>