force-app/main/default/objects/Affiliation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates whether this is a current or former Affiliation.</description>
    <inlineHelpText>Indicates whether this is a current or former Affiliation.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>